<resources>
    <string name="app_name">Recipe Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="recipe_search">Search for a recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="amount">Amount</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">ingredients</string>
    <string name="estimated_time">Estimated time</string>
    <string name="fridge">Fridge</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="basic_info">Basic Info:</string>
    <string name="health_related">Health-related (Optional)</string>
    <string name="miscellaneous_optional">Miscellaneous (Optional)</string>
    <string name="price">Total Price</string>
    <string name="food_type">Food Type (Aisle)</string>
    <string name="calories">Calories</string>
    <string name="ingredient_search">Search for an ingredient</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="wheat">Wheat</string>
    <string name="fish">Fish</string>
    <string name="shellfish">Shellfish</string>
    <string name="soy">Soy</string>
    <string name="peanuts">Peanuts</string>
    <string name="tree_nuts">Tree Nuts</string>
    <string name="common_allergies">Common Allergies:</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="other_info_optional">Other Info (Optional):</string>
    <string name="name">Name</string>
    <string name="name_hint">Full name</string>
    <string name="bio">Bio:</string>
    <string name="self_introduction">Introduce yourself!</string>
    <string name="change_password_here">Change Password Here</string>
    <string name="add_account">Add Account</string>
    <string name="search_title">Search for a recipe</string>
    <string name="title_activity_search_friends">SearchFriendsActivity</string>

    <string name="friends_list">Your Friends:</string>

    <string name="followers_initial">Followers: 0</string>
    <string name="following_initial">Following: 0</string>

    <string name="find_friends">Find Friends!</string>
    <string name="your_settings">Manage Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aisle_name">Aisle name</string>
    <string name="postComponentSeparator">$$%%$%$</string>
    <string name="save_question">Save?</string>
    <string name="recipe_view_ingredients_title">Ingredients</string>
    <string name="recipe_view_steps_title">Directions</string>
    <string name="share_recipe">Share Recipe</string>

    <string name="delete">Delete</string>
    <string name="others">Others</string>
    <string name="nuts">Nuts</string>
    <string name="beverages">Beverages</string>
    <string name="seasoning">Seasoning</string>
    <string name="dairy">Dairy</string>
    <string name="carbs">Carbs</string>
    <string name="meat">Meat</string>
</resources>
